Tools/Convert_GL.h_and_GLext.h_C-Include/temp.h

/*
 * Datatypes
 */
typedef unsigned int	GLenum;
typedef unsigned char	GLboolean;
typedef unsigned int	GLbitfield;
typedef void		GLvoid;
typedef signed char	GLbyte;		/* 1-byte signed */
typedef short		GLshort;	/* 2-byte signed */
typedef int		GLint;		/* 4-byte signed */
typedef unsigned char	GLubyte;	/* 1-byte unsigned */
typedef unsigned short	GLushort;	/* 2-byte unsigned */
typedef unsigned int	GLuint;		/* 4-byte unsigned */
typedef int		GLsizei;	/* 4-byte signed */
typedef float		GLfloat;	/* single precision float */
typedef float		GLclampf;	/* single precision float in [0,1] */
typedef double		GLdouble;	/* double precision float */
typedef double		GLclampd;	/* double precision float in [0,1] */
/*
 * Miscellaneous
 */

 void  glClearIndex( GLfloat c );
 void  glClearColor( GLclampf red, GLclampf green, GLclampf blue, GLclampf alpha );
 void  glClear( GLbitfield mask );
 void  glIndexMask( GLuint mask );
 void  glColorMask( GLboolean red, GLboolean green, GLboolean blue, GLboolean alpha );
 void  glAlphaFunc( GLenum func, GLclampf ref );
 void  glBlendFunc( GLenum sfactor, GLenum dfactor );
 void  glLogicOp( GLenum opcode );
 void  glCullFace( GLenum mode );
 void  glFrontFace( GLenum mode );
 void  glPointSize( GLfloat size );
 void  glLineWidth( GLfloat width );
 void  glLineStipple( GLint factor, GLushort pattern );
 void  glPolygonMode( GLenum face, GLenum mode );
 void  glPolygonOffset( GLfloat factor, GLfloat units );
 void  glPolygonStipple( const GLubyte *mask );
 void  glGetPolygonStipple( GLubyte *mask );
 void  glEdgeFlag( GLboolean flag );
 void  glEdgeFlagv( const GLboolean *flag );
 void  glScissor( GLint x, GLint y, GLsizei width, GLsizei height);
 void  glClipPlane( GLenum plane, const GLdouble *equation );
 void  glGetClipPlane( GLenum plane, GLdouble *equation );
 void  glDrawBuffer( GLenum mode );
 void  glReadBuffer( GLenum mode );
 void  glEnable( GLenum cap );
 void  glDisable( GLenum cap );
 GLboolean  glIsEnabled( GLenum cap );
 void  glEnableClientState( GLenum cap );  /* 1.1 */
 void  glDisableClientState( GLenum cap );  /* 1.1 */
 void  glGetBooleanv( GLenum pname, GLboolean *params );
 void  glGetDoublev( GLenum pname, GLdouble *params );
 void  glGetFloatv( GLenum pname, GLfloat *params );
 void  glGetIntegerv( GLenum pname, GLint *params );
 void  glPushAttrib( GLbitfield mask );
 void  glPopAttrib( void );
 void  glPushClientAttrib( GLbitfield mask );  /* 1.1 */
 void  glPopClientAttrib( void );  /* 1.1 */
 GLint  glRenderMode( GLenum mode );
 GLenum  glGetError( void );
 const GLubyte *  glGetString( GLenum name );
 void  glFinish( void );
 void  glFlush( void );
 void  glHint( GLenum target, GLenum mode );
/*
 * Depth Buffer
 */

 void  glClearDepth( GLclampd depth );
 void  glDepthFunc( GLenum func );
 void  glDepthMask( GLboolean flag );
 void  glDepthRange( GLclampd near_val, GLclampd far_val );
/*
 * Accumulation Buffer
 */

 void  glClearAccum( GLfloat red, GLfloat green, GLfloat blue, GLfloat alpha );
 void  glAccum( GLenum op, GLfloat value );
/*
 * Transformation
 */

 void  glMatrixMode( GLenum mode );
 void  glOrtho( GLdouble left, GLdouble right,
                                 GLdouble bottom, GLdouble top,
                                 GLdouble near_val, GLdouble far_val );
 void  glFrustum( GLdouble left, GLdouble right,
                                   GLdouble bottom, GLdouble top,
                                   GLdouble near_val, GLdouble far_val );
 void  glViewport( GLint x, GLint y,
                                    GLsizei width, GLsizei height );
 void  glPushMatrix( void );
 void  glPopMatrix( void );
 void  glLoadIdentity( void );
 void  glLoadMatrixd( const GLdouble *m );
 void  glLoadMatrixf( const GLfloat *m );
 void  glMultMatrixd( const GLdouble *m );
 void  glMultMatrixf( const GLfloat *m );
 void  glRotated( GLdouble angle,
                                   GLdouble x, GLdouble y, GLdouble z );
 void  glRotatef( GLfloat angle,
                                   GLfloat x, GLfloat y, GLfloat z );
 void  glScaled( GLdouble x, GLdouble y, GLdouble z );
 void  glScalef( GLfloat x, GLfloat y, GLfloat z );
 void  glTranslated( GLdouble x, GLdouble y, GLdouble z );
 void  glTranslatef( GLfloat x, GLfloat y, GLfloat z );
/*
 * Display Lists
 */

 GLboolean  glIsList( GLuint list );
 void  glDeleteLists( GLuint list, GLsizei range );
 GLuint  glGenLists( GLsizei range );
 void  glNewList( GLuint list, GLenum mode );
 void  glEndList( void );
 void  glCallList( GLuint list );
 void  glCallLists( GLsizei n, GLenum type,
                                     const GLvoid *lists );
 void  glListBase( GLuint base );
/*
 * Drawing Functions
 */

 void  glBegin( GLenum mode );
 void  glEnd( void );
 void  glVertex2d( GLdouble x, GLdouble y );
 void  glVertex2f( GLfloat x, GLfloat y );
 void  glVertex2i( GLint x, GLint y );
 void  glVertex2s( GLshort x, GLshort y );
 void  glVertex3d( GLdouble x, GLdouble y, GLdouble z );
 void  glVertex3f( GLfloat x, GLfloat y, GLfloat z );
 void  glVertex3i( GLint x, GLint y, GLint z );
 void  glVertex3s( GLshort x, GLshort y, GLshort z );
 void  glVertex4d( GLdouble x, GLdouble y, GLdouble z, GLdouble w );
 void  glVertex4f( GLfloat x, GLfloat y, GLfloat z, GLfloat w );
 void  glVertex4i( GLint x, GLint y, GLint z, GLint w );
 void  glVertex4s( GLshort x, GLshort y, GLshort z, GLshort w );
 void  glVertex2dv( const GLdouble *v );
 void  glVertex2fv( const GLfloat *v );
 void  glVertex2iv( const GLint *v );
 void  glVertex2sv( const GLshort *v );
 void  glVertex3dv( const GLdouble *v );
 void  glVertex3fv( const GLfloat *v );
 void  glVertex3iv( const GLint *v );
 void  glVertex3sv( const GLshort *v );
 void  glVertex4dv( const GLdouble *v );
 void  glVertex4fv( const GLfloat *v );
 void  glVertex4iv( const GLint *v );
 void  glVertex4sv( const GLshort *v );
 void  glNormal3b( GLbyte nx, GLbyte ny, GLbyte nz );
 void  glNormal3d( GLdouble nx, GLdouble ny, GLdouble nz );
 void  glNormal3f( GLfloat nx, GLfloat ny, GLfloat nz );
 void  glNormal3i( GLint nx, GLint ny, GLint nz );
 void  glNormal3s( GLshort nx, GLshort ny, GLshort nz );
 void  glNormal3bv( const GLbyte *v );
 void  glNormal3dv( const GLdouble *v );
 void  glNormal3fv( const GLfloat *v );
 void  glNormal3iv( const GLint *v );
 void  glNormal3sv( const GLshort *v );
 void  glIndexd( GLdouble c );
 void  glIndexf( GLfloat c );
 void  glIndexi( GLint c );
 void  glIndexs( GLshort c );
 void  glIndexub( GLubyte c );  /* 1.1 */
 void  glIndexdv( const GLdouble *c );
 void  glIndexfv( const GLfloat *c );
 void  glIndexiv( const GLint *c );
 void  glIndexsv( const GLshort *c );
 void  glIndexubv( const GLubyte *c );  /* 1.1 */
 void  glColor3b( GLbyte red, GLbyte green, GLbyte blue );
 void  glColor3d( GLdouble red, GLdouble green, GLdouble blue );
 void  glColor3f( GLfloat red, GLfloat green, GLfloat blue );
 void  glColor3i( GLint red, GLint green, GLint blue );
 void  glColor3s( GLshort red, GLshort green, GLshort blue );
 void  glColor3ub( GLubyte red, GLubyte green, GLubyte blue );
 void  glColor3ui( GLuint red, GLuint green, GLuint blue );
 void  glColor3us( GLushort red, GLushort green, GLushort blue );
 void  glColor4b( GLbyte red, GLbyte green,
                                   GLbyte blue, GLbyte alpha );
 void  glColor4d( GLdouble red, GLdouble green,
                                   GLdouble blue, GLdouble alpha );
 void  glColor4f( GLfloat red, GLfloat green,
                                   GLfloat blue, GLfloat alpha );
 void  glColor4i( GLint red, GLint green,
                                   GLint blue, GLint alpha );
 void  glColor4s( GLshort red, GLshort green,
                                   GLshort blue, GLshort alpha );
 void  glColor4ub( GLubyte red, GLubyte green,
                                    GLubyte blue, GLubyte alpha );
 void  glColor4ui( GLuint red, GLuint green,
                                    GLuint blue, GLuint alpha );
 void  glColor4us( GLushort red, GLushort green,
                                    GLushort blue, GLushort alpha );
 void  glColor3bv( const GLbyte *v );
 void  glColor3dv( const GLdouble *v );
 void  glColor3fv( const GLfloat *v );
 void  glColor3iv( const GLint *v );
 void  glColor3sv( const GLshort *v );
 void  glColor3ubv( const GLubyte *v );
 void  glColor3uiv( const GLuint *v );
 void  glColor3usv( const GLushort *v );
 void  glColor4bv( const GLbyte *v );
 void  glColor4dv( const GLdouble *v );
 void  glColor4fv( const GLfloat *v );
 void  glColor4iv( const GLint *v );
 void  glColor4sv( const GLshort *v );
 void  glColor4ubv( const GLubyte *v );
 void  glColor4uiv( const GLuint *v );
 void  glColor4usv( const GLushort *v );
 void  glTexCoord1d( GLdouble s );
 void  glTexCoord1f( GLfloat s );
 void  glTexCoord1i( GLint s );
 void  glTexCoord1s( GLshort s );
 void  glTexCoord2d( GLdouble s, GLdouble t );
 void  glTexCoord2f( GLfloat s, GLfloat t );
 void  glTexCoord2i( GLint s, GLint t );
 void  glTexCoord2s( GLshort s, GLshort t );
 void  glTexCoord3d( GLdouble s, GLdouble t, GLdouble r );
 void  glTexCoord3f( GLfloat s, GLfloat t, GLfloat r );
 void  glTexCoord3i( GLint s, GLint t, GLint r );
 void  glTexCoord3s( GLshort s, GLshort t, GLshort r );
 void  glTexCoord4d( GLdouble s, GLdouble t, GLdouble r, GLdouble q );
 void  glTexCoord4f( GLfloat s, GLfloat t, GLfloat r, GLfloat q );
 void  glTexCoord4i( GLint s, GLint t, GLint r, GLint q );
 void  glTexCoord4s( GLshort s, GLshort t, GLshort r, GLshort q );
 void  glTexCoord1dv( const GLdouble *v );
 void  glTexCoord1fv( const GLfloat *v );
 void  glTexCoord1iv( const GLint *v );
 void  glTexCoord1sv( const GLshort *v );
 void  glTexCoord2dv( const GLdouble *v );
 void  glTexCoord2fv( const GLfloat *v );
 void  glTexCoord2iv( const GLint *v );
 void  glTexCoord2sv( const GLshort *v );
 void  glTexCoord3dv( const GLdouble *v );