Examples/glfw3/gl.pas


procedure glClearIndex(c: TGLfloat); cdecl; external;
procedure glClearColor(red: TGLclampf; green: TGLclampf; blue: TGLclampf; alpha: TGLclampf); cdecl; external;
procedure glClear(mask: TGLbitfield); cdecl; external;
procedure glIndexMask(mask: TGLuint); cdecl; external;
procedure glColorMask(red: TGLboolean; green: TGLboolean; blue: TGLboolean; alpha: TGLboolean); cdecl; external;
procedure glAlphaFunc(func: TGLenum; ref: TGLclampf); cdecl; external;
procedure glBlendFunc(sfactor: TGLenum; dfactor: TGLenum); cdecl; external;
procedure glLogicOp(opcode: TGLenum); cdecl; external;
procedure glCullFace(mode: TGLenum); cdecl; external;
procedure glFrontFace(mode: TGLenum); cdecl; external;
procedure glPointSize(size: TGLfloat); cdecl; external;
procedure glLineWidth(Width: TGLfloat); cdecl; external;
procedure glLineStipple(factor: TGLint; pattern: TGLushort); cdecl; external;
procedure glPolygonMode(face: TGLenum; mode: TGLenum); cdecl; external;
procedure glPolygonOffset(factor: TGLfloat; units: TGLfloat); cdecl; external;
procedure glPolygonStipple(mask: PGLubyte); cdecl; external;
procedure glGetPolygonStipple(mask: PGLubyte); cdecl; external;
procedure glEdgeFlag(flag: TGLboolean); cdecl; external;
procedure glEdgeFlagv(flag: PGLboolean); cdecl; external;
procedure glScissor(x: TGLint; y: TGLint; Width: TGLsizei; Height: TGLsizei); cdecl; external;
procedure glClipPlane(plane: TGLenum; equation: PGLdouble); cdecl; external;
procedure glGetClipPlane(plane: TGLenum; equation: PGLdouble); cdecl; external;
procedure glDrawBuffer(mode: TGLenum); cdecl; external;
procedure glReadBuffer(mode: TGLenum); cdecl; external;
procedure glEnable(cap: TGLenum); cdecl; external;
procedure glDisable(cap: TGLenum); cdecl; external;
function glIsEnabled(cap: TGLenum): TGLboolean; cdecl; external;
procedure glEnableClientState(cap: TGLenum); cdecl; external;
{ 1.1  }
procedure glDisableClientState(cap: TGLenum); cdecl; external;
{ 1.1  }
procedure glGetBooleanv(pname: TGLenum; params: PGLboolean); cdecl; external;
procedure glGetDoublev(pname: TGLenum; params: PGLdouble); cdecl; external;
procedure glGetFloatv(pname: TGLenum; params: PGLfloat); cdecl; external;
procedure glGetIntegerv(pname: TGLenum; params: PGLint); cdecl; external;
procedure glPushAttrib(mask: TGLbitfield); cdecl; external;
procedure glPopAttrib; cdecl; external;
procedure glPushClientAttrib(mask: TGLbitfield); cdecl; external;
{ 1.1  }
procedure glPopClientAttrib; cdecl; external;
{ 1.1  }
function glRenderMode(mode: TGLenum): TGLint; cdecl; external;
function glGetError: TGLenum; cdecl; external;
function glGetString(Name: TGLenum): PGLubyte; cdecl; external;
procedure glFinish; cdecl; external;
procedure glFlush; cdecl; external;
procedure glHint(target: TGLenum; mode: TGLenum); cdecl; external;
{
 * Depth Buffer
  }
procedure glClearDepth(depth: TGLclampd); cdecl; external;
procedure glDepthFunc(func: TGLenum); cdecl; external;
procedure glDepthMask(flag: TGLboolean); cdecl; external;
procedure glDepthRange(near_val: TGLclampd; far_val: TGLclampd); cdecl; external;
{
 * Accumulation Buffer
  }
procedure glClearAccum(red: TGLfloat; green: TGLfloat; blue: TGLfloat; alpha: TGLfloat); cdecl; external;
procedure glAccum(op: TGLenum; Value: TGLfloat); cdecl; external;
{
 * Transformation
  }
procedure glMatrixMode(mode: TGLenum); cdecl; external;
procedure glOrtho(left: TGLdouble; right: TGLdouble; bottom: TGLdouble; top: TGLdouble; near_val: TGLdouble;
  far_val: TGLdouble); cdecl; external;
procedure glFrustum(left: TGLdouble; right: TGLdouble; bottom: TGLdouble; top: TGLdouble; near_val: TGLdouble;
  far_val: TGLdouble); cdecl; external;
procedure glViewport(x: TGLint; y: TGLint; Width: TGLsizei; Height: TGLsizei); cdecl; external;
procedure glPushMatrix; cdecl; external;
procedure glPopMatrix; cdecl; external;
procedure glLoadIdentity; cdecl; external;
procedure glLoadMatrixd(m: PGLdouble); cdecl; external;
procedure glLoadMatrixf(m: PGLfloat); cdecl; external;
procedure glMultMatrixd(m: PGLdouble); cdecl; external;
procedure glMultMatrixf(m: PGLfloat); cdecl; external;
procedure glRotated(angle: TGLdouble; x: TGLdouble; y: TGLdouble; z: TGLdouble); cdecl; external;
procedure glRotatef(angle: TGLfloat; x: TGLfloat; y: TGLfloat; z: TGLfloat); cdecl; external;
procedure glScaled(x: TGLdouble; y: TGLdouble; z: TGLdouble); cdecl; external;
procedure glScalef(x: TGLfloat; y: TGLfloat; z: TGLfloat); cdecl; external;
procedure glTranslated(x: TGLdouble; y: TGLdouble; z: TGLdouble); cdecl; external;
procedure glTranslatef(x: TGLfloat; y: TGLfloat; z: TGLfloat); cdecl; external;
{
 * Display Lists
  }
function glIsList(list: TGLuint): TGLboolean; cdecl; external;
procedure glDeleteLists(list: TGLuint; range: TGLsizei); cdecl; external;
function glGenLists(range: TGLsizei): TGLuint; cdecl; external;
procedure glNewList(list: TGLuint; mode: TGLenum); cdecl; external;
procedure glEndList; cdecl; external;
procedure glCallList(list: TGLuint); cdecl; external;
procedure glCallLists(n: TGLsizei; _type: TGLenum; lists: PGLvoid); cdecl; external;
procedure glListBase(base: TGLuint); cdecl; external;
{
 * Drawing Functions
  }
procedure glBegin(mode: TGLenum); cdecl; external;
procedure glEnd; cdecl; external;
procedure glVertex2d(x: TGLdouble; y: TGLdouble); cdecl; external;
procedure glVertex2f(x: TGLfloat; y: TGLfloat); cdecl; external;
procedure glVertex2i(x: TGLint; y: TGLint); cdecl; external;
procedure glVertex2s(x: TGLshort; y: TGLshort); cdecl; external;
procedure glVertex3d(x: TGLdouble; y: TGLdouble; z: TGLdouble); cdecl; external;
procedure glVertex3f(x: TGLfloat; y: TGLfloat; z: TGLfloat); cdecl; external;
procedure glVertex3i(x: TGLint; y: TGLint; z: TGLint); cdecl; external;
procedure glVertex3s(x: TGLshort; y: TGLshort; z: TGLshort); cdecl; external;
procedure glVertex4d(x: TGLdouble; y: TGLdouble; z: TGLdouble; w: TGLdouble); cdecl; external;
procedure glVertex4f(x: TGLfloat; y: TGLfloat; z: TGLfloat; w: TGLfloat); cdecl; external;
procedure glVertex4i(x: TGLint; y: TGLint; z: TGLint; w: TGLint); cdecl; external;
procedure glVertex4s(x: TGLshort; y: TGLshort; z: TGLshort; w: TGLshort); cdecl; external;
procedure glVertex2dv(v: PGLdouble); cdecl; external;
procedure glVertex2fv(v: PGLfloat); cdecl; external;
procedure glVertex2iv(v: PGLint); cdecl; external;
procedure glVertex2sv(v: PGLshort); cdecl; external;
procedure glVertex3dv(v: PGLdouble); cdecl; external;
procedure glVertex3fv(v: PGLfloat); cdecl; external;
procedure glVertex3iv(v: PGLint); cdecl; external;
procedure glVertex3sv(v: PGLshort); cdecl; external;
procedure glVertex4dv(v: PGLdouble); cdecl; external;
procedure glVertex4fv(v: PGLfloat); cdecl; external;
procedure glVertex4iv(v: PGLint); cdecl; external;
procedure glVertex4sv(v: PGLshort); cdecl; external;
procedure glNormal3b(nx: TGLbyte; ny: TGLbyte; nz: TGLbyte); cdecl; external;
procedure glNormal3d(nx: TGLdouble; ny: TGLdouble; nz: TGLdouble); cdecl; external;
procedure glNormal3f(nx: TGLfloat; ny: TGLfloat; nz: TGLfloat); cdecl; external;
procedure glNormal3i(nx: TGLint; ny: TGLint; nz: TGLint); cdecl; external;
procedure glNormal3s(nx: TGLshort; ny: TGLshort; nz: TGLshort); cdecl; external;
procedure glNormal3bv(v: PGLbyte); cdecl; external;
procedure glNormal3dv(v: PGLdouble); cdecl; external;
procedure glNormal3fv(v: PGLfloat); cdecl; external;
procedure glNormal3iv(v: PGLint); cdecl; external;
procedure glNormal3sv(v: PGLshort); cdecl; external;
procedure glIndexd(c: TGLdouble); cdecl; external;
procedure glIndexf(c: TGLfloat); cdecl; external;
procedure glIndexi(c: TGLint); cdecl; external;
procedure glIndexs(c: TGLshort); cdecl; external;
procedure glIndexub(c: TGLubyte); cdecl; external;
{ 1.1  }
procedure glIndexdv(c: PGLdouble); cdecl; external;
procedure glIndexfv(c: PGLfloat); cdecl; external;
procedure glIndexiv(c: PGLint); cdecl; external;
procedure glIndexsv(c: PGLshort); cdecl; external;
procedure glIndexubv(c: PGLubyte); cdecl; external;
{ 1.1  }
procedure glColor3b(red: TGLbyte; green: TGLbyte; blue: TGLbyte); cdecl; external;
procedure glColor3d(red: TGLdouble; green: TGLdouble; blue: TGLdouble); cdecl; external;
procedure glColor3f(red: TGLfloat; green: TGLfloat; blue: TGLfloat); cdecl; external;
procedure glColor3i(red: TGLint; green: TGLint; blue: TGLint); cdecl; external;
procedure glColor3s(red: TGLshort; green: TGLshort; blue: TGLshort); cdecl; external;
procedure glColor3ub(red: TGLubyte; green: TGLubyte; blue: TGLubyte); cdecl; external;
procedure glColor3ui(red: TGLuint; green: TGLuint; blue: TGLuint); cdecl; external;
procedure glColor3us(red: TGLushort; green: TGLushort; blue: TGLushort); cdecl; external;
procedure glColor4b(red: TGLbyte; green: TGLbyte; blue: TGLbyte; alpha: TGLbyte); cdecl; external;
procedure glColor4d(red: TGLdouble; green: TGLdouble; blue: TGLdouble; alpha: TGLdouble); cdecl; external;
procedure glColor4f(red: TGLfloat; green: TGLfloat; blue: TGLfloat; alpha: TGLfloat); cdecl; external;
procedure glColor4i(red: TGLint; green: TGLint; blue: TGLint; alpha: TGLint); cdecl; external;
procedure glColor4s(red: TGLshort; green: TGLshort; blue: TGLshort; alpha: TGLshort); cdecl; external;
procedure glColor4ub(red: TGLubyte; green: TGLubyte; blue: TGLubyte; alpha: TGLubyte); cdecl; external;
procedure glColor4ui(red: TGLuint; green: TGLuint; blue: TGLuint; alpha: TGLuint); cdecl; external;
procedure glColor4us(red: TGLushort; green: TGLushort; blue: TGLushort; alpha: TGLushort); cdecl; external;
procedure glColor3bv(v: PGLbyte); cdecl; external;
procedure glColor3dv(v: PGLdouble); cdecl; external;
procedure glColor3fv(v: PGLfloat); cdecl; external;
procedure glColor3iv(v: PGLint); cdecl; external;
procedure glColor3sv(v: PGLshort); cdecl; external;
procedure glColor3ubv(v: PGLubyte); cdecl; external;
procedure glColor3uiv(v: PGLuint); cdecl; external;
procedure glColor3usv(v: PGLushort); cdecl; external;
procedure glColor4bv(v: PGLbyte); cdecl; external;
procedure glColor4dv(v: PGLdouble); cdecl; external;
procedure glColor4fv(v: PGLfloat); cdecl; external;
procedure glColor4iv(v: PGLint); cdecl; external;
procedure glColor4sv(v: PGLshort); cdecl; external;
procedure glColor4ubv(v: PGLubyte); cdecl; external;
procedure glColor4uiv(v: PGLuint); cdecl; external;
procedure glColor4usv(v: PGLushort); cdecl; external;
procedure glTexCoord1d(s: TGLdouble); cdecl; external;
procedure glTexCoord1f(s: TGLfloat); cdecl; external;
procedure glTexCoord1i(s: TGLint); cdecl; external;
procedure glTexCoord1s(s: TGLshort); cdecl; external;
procedure glTexCoord2d(s: TGLdouble; t: TGLdouble); cdecl; external;
procedure glTexCoord2f(s: TGLfloat; t: TGLfloat); cdecl; external;
procedure glTexCoord2i(s: TGLint; t: TGLint); cdecl; external;
procedure glTexCoord2s(s: TGLshort; t: TGLshort); cdecl; external;
procedure glTexCoord3d(s: TGLdouble; t: TGLdouble; r: TGLdouble); cdecl; external;
procedure glTexCoord3f(s: TGLfloat; t: TGLfloat; r: TGLfloat); cdecl; external;
procedure glTexCoord3i(s: TGLint; t: TGLint; r: TGLint); cdecl; external;
procedure glTexCoord3s(s: TGLshort; t: TGLshort; r: TGLshort); cdecl; external;
procedure glTexCoord4d(s: TGLdouble; t: TGLdouble; r: TGLdouble; q: TGLdouble); cdecl; external;
procedure glTexCoord4f(s: TGLfloat; t: TGLfloat; r: TGLfloat; q: TGLfloat); cdecl; external;
procedure glTexCoord4i(s: TGLint; t: TGLint; r: TGLint; q: TGLint); cdecl; external;
procedure glTexCoord4s(s: TGLshort; t: TGLshort; r: TGLshort; q: TGLshort); cdecl; external;
procedure glTexCoord1dv(v: PGLdouble); cdecl; external;
procedure glTexCoord1fv(v: PGLfloat); cdecl; external;
procedure glTexCoord1iv(v: PGLint); cdecl; external;
procedure glTexCoord1sv(v: PGLshort); cdecl; external;
procedure glTexCoord2dv(v: PGLdouble); cdecl; external;
procedure glTexCoord2fv(v: PGLfloat); cdecl; external;
procedure glTexCoord2iv(v: PGLint); cdecl; external;
procedure glTexCoord2sv(v: PGLshort); cdecl; external;
procedure glTexCoord3dv(v: PGLdouble); cdecl; external;
